# HypoMuxPlus

./: .gitignore  README.md  README_EN.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts  一键更新版本号.bat  继续更新的内容.txt
.kiro/specs/network-capability-expansion/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/nic-upstream-proxy-chain/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/pro-differentiation-and-hardening/: design.md  requirements.md  tasks.md
scripts/: gen-icon.mjs  update-version.ps1
src/: App.tsx  i18n.test.ts  i18n.ts  main.tsx  store.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: appcompat.rs  engine.rs  lib.rs  logger.rs  main.rs  netadapter.rs  process.rs  proxyguardian.rs  service.rs  subscription.rs  sysproxy.rs  telemetry.rs  tunmode.rs
src/components/: AboutPage.tsx  AdapterTable.tsx  AggregateSpeedTest.tsx  AnimatedNumber.tsx  AreaChart.test.ts  AreaChart.tsx  BoostButton.tsx  BrandIcons.tsx  Console.tsx  Dashboard.tsx  DiagnosticsPage.tsx  EmptyState.tsx  ErrorBoundary.tsx  Hud.tsx  LinkDistribution.tsx  Logo.tsx  MonitorPanel.tsx  NumberField.tsx  Onboarding.tsx  SessionReport.tsx  SettingsPage.tsx  Sidebar.tsx  Sparkline.tsx  SpeedHero.tsx  StatsPage.tsx  StatusBar.tsx  Switch.tsx  TitleBar.tsx  Toast.tsx  Tooltip.tsx  TopBar.tsx  TutorialPage.tsx  UpdateDialog.tsx  shell-types.ts
src/lib/: api.ts  clipboard.test.ts  clipboard.ts  diag.report.test.ts  diag.test.ts  diag.ts  dnsvalidate.ts  routesim.test.ts  routesim.ts  subscription.test.ts  subscription.ts  upstream.test.ts  upstream.ts  useModal.test.ts  useModal.ts  version.test.ts  version.ts
website/: index.html  script.js  style.css
