[package]
name = "hypomuxplus"
version = "1.2.6"
description = "HypoMuxPlus - 多网卡带宽聚合工具"
authors = ["青云制作_彭明航"]
edition = "2021"

[lib]
name = "hypomuxplus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-window-state = "2"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "sync", "time", "macros"] }
tokio-util = { version = "0.7", features = ["rt"] }
socket2 = "0.5"
winreg = "0.52"
parking_lot = "0.12"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
webpki-roots = "0.26"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
# 全局接管 (TUN) 模式：wintun 虚拟网卡 + 用户态 TCP/IP 栈，把系统流量喂给本地 SOCKS 引擎
ipstack = "1.0"
tun = { version = "0.8", default-features = false, features = ["async"] }
# 服务模式：以 SYSTEM 常驻的 Windows 服务承载 TUN，主程序经命名管道 IPC 控制，免每次管理员
windows-service = "0.7"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Networking_WinSock",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinInet",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_UI_Shell",
    "Win32_Security",
    "Win32_Security_Authorization",
] }

[dev-dependencies]
# 属性测试基建：统一约定 ProptestConfig { cases: 100, .. }，测试独立于 GUI 与网络运行
proptest = "1"

[profile.release]
panic = "unwind"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
